fix: personal image was too big on large screen

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -41,13 +41,14 @@
   grid-row: 2;
 
   border-radius: 10px;
-  max-width: 25vw;
+  max-width: 425px;
   width: fit-content;
   height: fit-content;
 }
 
 .profile_picture img {
-  max-width: 90%;
+  width: 90%;
+  max-width: 400px;
   max-height: 90%;
   margin: 5%;
 }
